--- a/blocks/page.css
+++ b/blocks/page.css
@@ -17,9 +17,10 @@
   margin: 0 auto;
 }
 
-@media screen and (max-width: 925px) {
+@media screen and (max-width: 945px) {
   .page__section {
     margin: 0;
+    box-sizing: border-box;
   }
 }
 
